--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <hr />
   <body>
     <h1>Arthur Gostick</h1>
-    <img src="./images/profile photo.jpeg" alt="Arthur Gostick" height="200" />
+    <img src="images/profile photo.jpeg" alt="Arthur Gostick" height="200" />
     <br />
     <a href="/contact.html">Contact Me</a>
     <h2>Summary</h2>
